# SKY_FinalP

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  Принц Персии в попытке изменить сво.txt  Приспособление для проверки электро.txt
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/diary/: base.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
diary/templates/diary/includes/: inc_menu.html
diary/templates/diary/partials/: entry_list.html
diary/templatetags/: my_tags.py
static/css/: style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
users/templates/users/: reset_password.html  user_form.html
